@@ -1,3 +1,6 @@
+23 March 2022: Wouter
+	- Fix #651: [FR] Better logging for refused queries.
+
 18 March 2022: George
 	- Merge PR #648 from eaglegai: fix -q doesn't work when use with
 	  'unbound-control stats_shm'.
